--- a/.github/workflows/aws-ecs.yml
+++ b/.github/workflows/aws-ecs.yml
@@ -45,7 +45,7 @@ jobs:
             ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
             IMAGE_TAG: ${{ github.sha }}
           run: |
-            docker build -t $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG --build-arg NODE_ENV=production .
+            docker build -f app/Dockerfile $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG --build-arg NODE_ENV=production .
             docker push $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
             echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG"
         
@@ -67,4 +67,4 @@ jobs:
             task-definition: ${{ steps.task-def.outputs.task-definition }}
             service: ${{ env.ECS_SV }}
             cluster: ${{ env.ECS_CLUSTER }}
-            wait-for-service-stability: flase
+            wait-for-service-stability: false
