--- a/.github/workflows/aws-ecs.yml
+++ b/.github/workflows/aws-ecs.yml
@@ -45,7 +45,7 @@ jobs:
             ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
             IMAGE_TAG: ${{ github.sha }}
           run: |
-            docker build -f app/Dockerfile $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG --build-arg NODE_ENV=production .
+            docker build -f app/Dockerfile -t $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG --build-arg NODE_ENV=production .
             docker push $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
             echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG"
         
